--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,7 +13,8 @@
     <script src="scripts/controllers/companies.controller.js"></script>
 
     <!-- services -->
-    
+    <script src="scripts/services/company.service.js"></script>
+    <script src="scripts/services/cars.service.js"></script>
     
 </head>
 <body ng-app="MyApp">
